--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -13,7 +13,7 @@
       {{ /each }}
       <li role="presentation"><a href="/">home sweet home</a></li>
       <li role="presentation"><a href="/list">a list</a></li>
-      <li role="presentation"><a href="/item">an item</a></li>
+      <li role="presentation"><a href="/item-param">an item</a></li>
     </ul>
   </div>
 
