--- a/client/templates/list/list.html
+++ b/client/templates/list/list.html
@@ -5,7 +5,7 @@
 
       <ul>
         {{#each items}}
-          {{> item}}
+          <li>{{> item}}</li>
         {{/each}}
       </ul>
     </div>
