--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -1,3 +1,4 @@
+<template name="main">
 <head>
   <title>Demo for ShopCo</title>
   <meta name="viewport" content="initial-scale=1">
@@ -8,13 +9,13 @@
 
   <div class="container">
     <ul class="nav nav-tabs">
-      {{ #each routes }}
-        :)
-      {{ /each }}
-      <li role="presentation"><a href="/">home sweet home</a></li>
-      <li role="presentation"><a href="/list">a list</a></li>
-      <li role="presentation"><a href="/item-param">an item</a></li>
+      <li role="presentation"><a href="{{ getUrl }}">home sweet home</a></li>
+      <li role="presentation"><a href="{{ getUrl 'list' }}">a list</a></li>
+      <li role="presentation"><a href="{{ getUrl 'item-param' }}">an item</a></li>
     </ul>
   </div>
 
+  {{ > yield }}
+
 </body>
+</template>
